# al_phonebook

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt
al_phonebook/: __init__.py  cli.py  config.py  constants.py  formatter_registry.py  lib.py  types.py
docs/: design.md  development.md
examples/code/custom_formatter/: README.md  custom_formatter_json_example.py
examples/code/custom_item_schema/: README.md  custom_model_example.py  settings.yaml
tests/: common.py  conftest.py  test_cli.py  test_lib.py
tests/resources/: custom_model.py  custom_model.yaml  test_config.yaml  test_config_wrong.yaml
