[tool.poetry]
name = "al_phonebook"
version = "0.1.0"
description = "A CLI 'phonebook' to record information about people you know."
authors = ["Vitor Hugo <vtr@hotmail.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.9.0"}
textual = "^0.1.14"
tqdm = "^4.62.3"
loguru = "^0.5.3"
phonenumbers = "^8.12.41"
tinydb = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
pytest-mypy = "^0.8.1"
black = "^21.12b0"
hypothesis = "^6.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
