[tool.poetry]
name = "al_phonebook"
version = "0.1.0"
description = "A CLI 'phonebook' to record information about people you know."
authors = ["Vitor Hugo <vtr@hotmail.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.9.0"}
tinydb = "^4.5.2"
click = "^8.0.3"
PyYAML = "^6.0"
rich = "^11.0.0"

[tool.poetry.scripts]
al_phonebook = "al_phonebook.main:app"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
pytest-mypy = "^0.8.1"
black = "^21.12b0"
hypothesis = "^6.35.0"
types-PyYAML = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
